Revise operators.md for Java 21 updates
Updated section titles and content to reflect Java 21 features, including operator tokens, lambda expressions, and pattern matching. Added new sections on complete operator token list and Java 21 preview features.